# yew-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Trunk.toml  docker-compose.yaml  index.html  tailwind.config.js
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml  README.md
crates/server/migrations/: 20231216110241_init.sql
crates/server/src/: auth.rs  main.rs  protected.rs  users.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs  pages.rs  routes.rs
crates/ui/src/components/: login_form.rs
crates/ui/src/pages/: home.rs  login.rs  protected.rs
crates/ui/static/: style.css  styles.css
