[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
console_error_panic_hook = "0.1.7"
eyre = "0.6.11"
gloo = "0.11.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.66", features = ["RequestCredentials"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew-router = "0.18.0"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }
